--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,36 @@
-<h1>bangladesh is beautifull country . we have lot of rivers</h1>
-<p>jessore is my district. jessore is the 1st digital district in our country</p>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <!-- Brand -->
+    <a class="navbar-brand" [routerLink]="['home']">
+        <img src="/assets/images/kk.png" alt="loading..."/>
+    </a>
+  
+    <!-- Links -->
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['home']">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['about']">About</a>
+      </li>
+  
+      <!-- Dropdown -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+          Services
+        </a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" [routerLink]="['bangladesh']">Bangladesh</a>
+          <a class="dropdown-item" [routerLink]="['pakistan']">Pakistan</a>
+          <a class="dropdown-item" [routerLink]="['india']">India</a>
+        </div>
+      </li>
+    </ul>
+  </nav>
+  <br>
+
+  <router-outlet></router-outlet>
+
+  <footer>This is footer area</footer>
+
+
+  
